Add database context and initial migration

--- a/.gitignore
+++ b/.gitignore
@@ -722,3 +722,6 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,aspnetcore,django,angular
+
+# Db Files
+ShopDB.db
